--- a/src/components/Collection/Collection.scss
+++ b/src/components/Collection/Collection.scss
@@ -34,7 +34,7 @@
         }
     }
 
-    #list {
+    .list {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         gap: 25px;
@@ -46,218 +46,232 @@
         @media (max-width: 900px) {
             grid-template-columns: 1fr;
         }
+    }
 
-        .hub {
-            position: relative;
-            box-sizing: border-box;
-            border-radius: 10px;
-            width: 100%;
-            background-color: $color-white;
-            padding-bottom: 60px;
+    #groups {
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+        
+        .group {
+            display: flex;
+            flex-direction: column;
+            gap: 25px;
+            padding: 20px;
+            border: 1px solid $color-black;
+        }
+    }
 
-            p {
+    .hub {
+        position: relative;
+        box-sizing: border-box;
+        border-radius: 10px;
+        width: 100%;
+        background-color: $color-white;
+        padding-bottom: 60px;
+
+        p {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+
+        .hubHeader {
+            .hubTitle {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                height: 80px;
+                padding: 0 10px 0 25px;
+
+                img {
+                    height: 40px;
+                    transition: opacity 0.5s ease;
+                    opacity: 0;
+                }
+            }
+
+            .hubImage {
+                position: relative;
+                width: 100%;
                 overflow: hidden;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-            }
+                background-color: darken($color-white, 5%);
 
-            .hubHeader {
-                .hubTitle {
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: center;
-                    height: 80px;
-                    padding: 0 10px 0 25px;
-
-                    img {
-                        height: 40px;
-                        transition: opacity 0.5s ease;
-                        opacity: 0;
-                    }
-                }
-
-                .hubImage {
-                    position: relative;
+                img {
+                    display: block;
+                    object-fit: cover;
+                    height: 250px;
                     width: 100%;
-                    overflow: hidden;
-                    background-color: darken($color-white, 5%);
+                    transition: opacity 0.5s ease;
+                    opacity: 0;
+                }
+            }
+        }
 
-                    img {
-                        display: block;
-                        object-fit: cover;
-                        height: 250px;
-                        width: 100%;
-                        transition: opacity 0.5s ease;
+        .hubBody {
+            padding-top: 15px;
+
+            div {
+                padding-left: 15px;
+                padding-right: 15px;
+            }
+
+            div:not(:last-of-type) {
+                margin-bottom: 15px;
+            }
+
+            .hubActive,
+            .hubDemo {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                gap: 10px;
+
+                p {
+                    font-weight: 300;
+                }
+
+                span {
+                    height: 5px;
+                    width: 5px;
+                    border-radius: 50%;
+                    animation: pulse 1s infinite;
+                }
+
+                @keyframes pulse {
+                    0% {
+                        opacity: 0;
+                    }
+
+                    50% {
+                        opacity: 1;
+                    }
+
+                    100% {
                         opacity: 0;
                     }
                 }
             }
 
-            .hubBody {
-                padding-top: 15px;
-
-                div {
-                    padding-left: 15px;
-                    padding-right: 15px;
+            .hubActive {
+                p {
+                    color: $color-green;
                 }
 
-                div:not(:last-of-type) {
-                    margin-bottom: 15px;
+                span {
+                    background-color: $color-green;
+                }
+            }
+
+            .hubDemo {
+                p {
+                    color: $color-blue;
                 }
 
-                .hubActive,
-                .hubDemo {
+                span {
+                    background-color: $color-blue;
+                }
+            }
+
+            .hubInfo {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                gap: 15px;
+            }
+
+            .hubProgress {
+                position: relative;
+                padding-left: 0;
+                padding-right: 0;
+                height: 40px;
+                background-color: darken($color-blue, 5%);
+                overflow: hidden;
+
+                p {
+                    position: absolute;
+                    z-index: 1;
+                    height: 100%;
+                    width: 100%;
                     display: flex;
-                    justify-content: flex-start;
+                    justify-content: center;
                     align-items: center;
                     gap: 10px;
-
-                    p {
-                        font-weight: 300;
-                    }
+                    color: $color-white;
 
                     span {
-                        height: 5px;
-                        width: 5px;
-                        border-radius: 50%;
-                        animation: pulse 1s infinite;
-                    }
-
-                    @keyframes pulse {
-                        0% {
-                            opacity: 0;
-                        }
-
-                        50% {
-                            opacity: 1;
-                        }
-
-                        100% {
-                            opacity: 0;
-                        }
+                        height: 20px;
+                        width: 1px;
+                        background-color: $color-white;
                     }
                 }
 
-                .hubActive {
-                    p {
-                        color: $color-green;
+                @keyframes progress {
+                    0% {
+                        background-position: 0 0;
                     }
-
-                    span {
-                        background-color: $color-green;
-                    }
-                }
-
-                .hubDemo {
-                    p {
-                        color: $color-blue;
-                    }
-
-                    span {
-                        background-color: $color-blue;
+                    100% {
+                        background-position: 50px 50px;
                     }
                 }
 
-                .hubInfo {
-                    display: flex;
-                    justify-content: flex-start;
-                    align-items: center;
-                    gap: 15px;
-                }
-
-                .hubProgress {
-                    position: relative;
+                .hubProgressBar {
+                    position: absolute;
                     padding-left: 0;
                     padding-right: 0;
-                    height: 40px;
-                    background-color: darken($color-blue, 5%);
-                    overflow: hidden;
-
-                    p {
-                        position: absolute;
-                        z-index: 1;
-                        height: 100%;
-                        width: 100%;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        gap: 10px;
-                        color: $color-white;
-
-                        span {
-                            height: 20px;
-                            width: 1px;
-                            background-color: $color-white;
-                        }
-                    }
-
-                    @keyframes progress {
-                        0% {
-                            background-position: 0 0;
-                        }
-                        100% {
-                            background-position: 50px 50px;
-                        }
-                    }
-
-                    .hubProgressBar {
-                        position: absolute;
-                        padding-left: 0;
-                        padding-right: 0;
-                        height: 100%;
-                        width: 0%;
-                        transition: width 5s ease;
-                        background-color: $color-blue;
-                        background-image: linear-gradient(
-                            -45deg,
-                            rgba(255, 255, 255, 0.2) 25%,
-                            transparent 25%,
-                            transparent 50%,
-                            rgba(255, 255, 255, 0.2) 50%,
-                            rgba(255, 255, 255, 0.2) 75%,
-                            transparent 75%,
-                            transparent
-                        );
-                        background-size: 50px 50px;
-                        animation: progress 4s linear infinite;
-                        box-shadow: 0px 0 15px 0px darken($color-blue, 20%);
-                    }
-                }
-
-                .hubText {
-                    p {
-                        overflow: unset;
-                        white-space: normal;
-                        text-overflow: unset;
-                    }
-                }
-
-                .hubQuote {
-                    background-color: $color-blue-light;
-                    padding: 30px;
-
-                    p {
-                        overflow: unset;
-                        white-space: normal;
-                        text-overflow: unset;
-                        text-align: center;
-                        font-style: italic;
-                        font-weight: 300;
-                    }
+                    height: 100%;
+                    width: 0%;
+                    transition: width 5s ease;
+                    background-color: $color-blue;
+                    background-image: linear-gradient(
+                        -45deg,
+                        rgba(255, 255, 255, 0.2) 25%,
+                        transparent 25%,
+                        transparent 50%,
+                        rgba(255, 255, 255, 0.2) 50%,
+                        rgba(255, 255, 255, 0.2) 75%,
+                        transparent 75%,
+                        transparent
+                    );
+                    background-size: 50px 50px;
+                    animation: progress 4s linear infinite;
+                    box-shadow: 0px 0 15px 0px darken($color-blue, 20%);
                 }
             }
 
-            .hubFooter {
-                position: absolute;
-                bottom: 0;
-                box-sizing: border-box;
-                height: 60px;
-                width: 100%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                padding: 15px;
+            .hubText {
+                p {
+                    overflow: unset;
+                    white-space: normal;
+                    text-overflow: unset;
+                }
             }
+
+            .hubQuote {
+                background-color: $color-blue-light;
+                padding: 30px;
+
+                p {
+                    overflow: unset;
+                    white-space: normal;
+                    text-overflow: unset;
+                    text-align: center;
+                    font-style: italic;
+                    font-weight: 300;
+                }
+            }
+        }
+
+        .hubFooter {
+            position: absolute;
+            bottom: 0;
+            box-sizing: border-box;
+            height: 60px;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 15px;
         }
     }
 }
